--- a/src/components/Favorites/favorites.css
+++ b/src/components/Favorites/favorites.css
@@ -5,22 +5,21 @@
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(12, 1fr);
     background: rgb(20, 25, 35);
+    font-family: "HelveticaNeue";
+    color: rgb(72, 72, 72);
 }
 
 .Favorites-Container {
     grid-column: 4 / 17;
-    grid-row: 1 / 16;
-    border-radius: 50px 0px 0px 0px;
+    grid-row: 3 / 16;
     background-color: rgb(255, 255, 255);
-    display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
+    overflow: auto;
 }
 
 .Favorites-title {
     border-radius: 50px 0px 0px 0px;
     background: rgb(255, 255, 255);
-    grid-column-start: 1;
+    grid-column-start: 4;
     /* autoprefixer: off */
     grid-column-end: 17;
     grid-row-start: 1;
@@ -39,12 +38,97 @@
     height: 100%;
     text-align: center;
     position: absolute;
-    top: 20%;
+    top: 30%;
     left: 50%;
-    transform: translateY(-20%);
+    transform: translateY(-30%);
     transform: translateX(-50%);
 }
 
 .FavItem {
-    border: solid 2px red;
+    display: block;
+    padding: 10px;
+    border-bottom: solid 0.25px rgb(218, 218, 218);
+}
+
+.fav-img-container img{
+    height: 125px;
+    width: 100px;
+    float: left;
+    padding: 20px;
+}
+
+.fav-Info {
+    position: relative;
+}
+
+.fav-title {
+    font-size: 25px;
+    font-family: "HelveticaNeue";
+    margin-bottom: 0px;
+}
+
+.fav-price {
+    color: rgb(27, 150, 27);
+    font-family: "HelveticaNeue";
+    font-size: 15px;
+    margin: 5px;
+}
+
+.fav-rating {
+    font-family: "HelveticaNeue-Thin";
+    color: rgb(227, 144, 42);
+    margin: 0px;
+}
+
+.fav-user {
+    font-family: "HelveticaNeue-light";
+    color: rgb(154, 154, 154);
+    margin-left: 10px;
+}
+
+.fav-address {
+    font-family: "HelveticaNeue-thin";
+    color: rgb(105, 105, 105);
+    font-size: 13px;
+}
+
+.FaDirections, .FaTrash {
+    color: white;
+    font-size: 20px;
+    padding: 10px;
+    position: absolute;
+    top: 50%;
+    border: 0;
+    border-radius: 50%;
+    transition: 0.25s ease-in-out;
+}
+
+.FaTrash:hover, .FaDirections:hover {
+    cursor: pointer;
+}
+
+.FaTrash:hover{
+    box-shadow: 0px 0px 5px 5px rgb(223, 19, 19);
+}
+
+.FaDirections:hover{
+    box-shadow: 0px 0px 5px 5px rgb(0, 128, 255);
+}
+
+.FaDirections {
+    right: 15%;
+    background-color: rgb(34, 138, 240);
+}
+
+.FaTrash {
+    right: 10%;
+    background-color: rgb(221, 92, 92);
+}
+
+.fav-direction, .fav-remove {
+    border: solid 1px white;
+}
+
+.fav-direction:focus, .fav-remove:focus {
+    outline: none;
 }
